--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -56,4 +56,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          docker-compose run --rm orion bash -c "pytest tests || true"
+          docker compose run --rm orion bash -c "pytest tests || true"
