--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -63,26 +63,22 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # Step 6: Clone FIWARE repository
+      # Step 3: Clone FIWARE repository
       - name: Clone FIWARE repository
         run: |
           git clone https://github.com/N5GEH/n5geh.platform.git
       
-      # Step 7: Start docker pull
-      - name: Start FIWARE services
+      # Step 4: Start Docker pull
+      - name: Pull FIWARE services
         working-directory: n5geh.platform/v2
         run: docker compose pull
 
-      # Step 8: start docker
-      - name: Checking Docker
-        run: docker ps -a
-
-      # Step 7: Start FIWARE services
+      # Step 5: Start FIWARE services
       - name: Start FIWARE services
         working-directory: n5geh.platform/v2
         run: docker compose up -d
-        
-      # Step 8: Wait for FIWARE services to start
+
+      # Step 6: Wait for FIWARE services to start
       - name: Wait for FIWARE services to start
         run: |
           for i in {1..100}; do
@@ -90,35 +86,38 @@ jobs:
             curl -s http://localhost:4041/iot/about && \
             curl -s http://localhost:8668/version && break || sleep 5
           done
-      
-      # Step 9: Verify FIWARE services
+
+      # Step 7: Verify FIWARE services
       - name: Verify FIWARE services
         run: |
           curl -X GET "http://localhost:1026/version"
           curl -X GET "http://localhost:4041/iot/about"
           curl -X GET "http://localhost:8668/version"
 
-      # Step 10: Print Docker logs for debugging
+      # Step 8: Print Docker logs for debugging
       - name: Print Docker logs
         working-directory: n5geh.platform/v2
-        run: docker compose logs 
-        
-      # Step 3: Install build tools
+        run: docker compose logs
+
+      # Step 9: Change back to the main directory
+      - name: Change back to the root directory
+        run: cd $GITHUB_WORKSPACE
+
+      # Step 10: Install build tools
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel
 
-      # Step 4: Install test dependencies
+      # Step 11: Install test dependencies
       - name: Install test dependencies
         run: |
           pip install .[test]
           pip install pytest
 
-      # Step 5: Run tests with both unittest and pytest
+      # Step 12: Run tests with both unittest and pytest
       - name: Run tests
         run: |
-          cd ..
           TEST_PATH="tests"
           python -m unittest discover -s $TEST_PATH -p "test_*.py" || true
           python -m pytest $TEST_PATH || true
