--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -122,6 +122,7 @@ jobs:
       # Step 13: Run tests with both unittest and pytest
       - name: Run tests
         run: |
+          docker ps -a
           pwd  # Confirm working directory
           python -m unittest discover -s tests -p "test_*.py"
           python -m pytest tests
