--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  setup_and_fiware:
+  ci:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       # Step 1: Checkout code
-      - name: Checkout code
+      - name: Checkout FiLiP code
         uses: actions/checkout@v3
 
       # Step 2: Set up Python
@@ -26,59 +26,29 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # Step 3: Install build tools
-      - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel
-
-      # Step 4: Install dependencies
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install .[development]
 
-      # Step 5: Create .env file
-      - name: Create .env file
-        run: |
-          echo "CB_URL=http://orion:1026" > .env
-          echo "IOTA_URL=http://iot-agent-json:4041" >> .env
-          echo "QL_URL=http://quantumleap:8668" >> .env
-          echo "MQTT_BROKER_URL=mqtt://mqtt-broker:1883" >> .env
-
-  test:
-    needs: setup_and_fiware
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
-    steps:
-      # Step 1: Checkout code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Set up Python
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      # Step 3: Clone FIWARE repository
+      # Step 4: Clone FIWARE repository
       - name: Clone FIWARE repository
         run: |
           git clone https://github.com/N5GEH/n5geh.platform.git
-      
-      # Step 4: Start Docker pull
-      - name: Pull FIWARE services
-        working-directory: n5geh.platform/v2
+          cd n5geh.platform/v2
+
+      # Step 5: Pull Docker containers
+      - name: Pull FIWARE Docker images
         run: docker compose pull
-
-      # Step 5: Start FIWARE services
-      - name: Start FIWARE services
         working-directory: n5geh.platform/v2
-        run: docker compose up -d
 
-      # Step 6: Wait for FIWARE services to start
+      # Step 6: Start FIWARE services
+      - name: Start FIWARE services
+        run: docker compose up -d
+        working-directory: n5geh.platform/v2
+
+      # Step 7: Wait for FIWARE services to start
       - name: Wait for FIWARE services to start
         run: |
           for i in {1..100}; do
@@ -87,43 +57,20 @@ jobs:
             curl -s http://localhost:8668/version && break || sleep 5
           done
 
-      # Step 7: Verify FIWARE services
+      # Step 8: Verify FIWARE services
       - name: Verify FIWARE services
         run: |
           curl -X GET "http://localhost:1026/version"
           curl -X GET "http://localhost:4041/iot/about"
           curl -X GET "http://localhost:8668/version"
 
-      # Step 8: Print Docker logs for debugging
-      - name: Print Docker logs
-        working-directory: n5geh.platform/v2
-        run: docker compose logs
-
-      # Step 9: Change back to the root directory
-      - name: Change back to the root directory
-        run: cd $GITHUB_WORKSPACE
-
-      # Step 10: Print working directory (for debugging)
-      - name: Print working directory
-        run: pwd
-
-      # Step 11: Install build tools
-      - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel
-
-      # Step 12: Install test dependencies
+      # Step 9: Install test dependencies
       - name: Install test dependencies
         run: |
-          pip install .[test]
-          pip install pytest
+          python -m pip install pytest
 
-      # Step 13: Run tests with both unittest and pytest
+      # Step 10: Run tests
       - name: Run tests
         run: |
-          docker ps -a
-          pwd  # Confirm working directory
-          cd tests
           python -m unittest discover -s tests -p "test_*.py"
           python -m pytest tests
