--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -51,11 +51,11 @@ jobs:
       - name: Create .env file
         run: |
           echo 'LOG_LEVEL="INFO"' > .env
-          echo 'CB_URL="http://myHost:1026"' >> .env
-          echo 'IOTA_JSON_URL="http://myHost:4041"' >> .env
-          echo 'IOTA_UL_URL="http://myHost:4061"' >> .env
-          echo 'QL_URL="http://myHost:8668"' >> .env
-          echo 'MQTT_BROKER_URL="mqtt://myHost:1883"' >> .env
+          echo 'CB_URL="http://134.130.56.175:1026"' >> .env
+          echo 'IOTA_JSON_URL="http://134.130.56.175:4041"' >> .env
+          echo 'IOTA_UL_URL="http://134.130.56.175:4061"' >> .env
+          echo 'QL_URL="http://134.130.56.175:8668"' >> .env
+          echo 'MQTT_BROKER_URL="mqtt://134.130.56.175:1883"' >> .env
           echo 'MQTT_BROKER_URL_INTERNAL="mqtt://mqtt-broker:1883"' >> .env
           echo 'FIWARE_SERVICE="filip"' >> .env
           echo 'FIWARE_SERVICEPATH="/testing"' >> .env
